--- a/WebApplication6/Site.Master
+++ b/WebApplication6/Site.Master
@@ -62,6 +62,9 @@
             background-position: center;
             z-index: -1; /* отправляем на задний план */
         }
+       body {
+            font-family: math;
+        }
 
     </style>
 </body>
